--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.4",
     "react-router-dom": "^6.6.1",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
